Внес изменения в соответсвии с замечаниями