@@ -1,13 +1,14 @@
 package ru.yandex.practicum.filmorate.validator;
 
-import ru.yandex.practicum.filmorate.exception.genre.GenreValidationException;
+import org.apache.commons.lang3.StringUtils;
+import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Genre;
 
 public class GenreValidator {
 
     public static boolean isGenreValid(Genre genre) {
-        if (genre.getName().isBlank()) {
-            throw new GenreValidationException(String.format("Genre name can not be blank. %s", genre));
+        if (StringUtils.isBlank(genre.getName())) {
+            throw new ValidationException(String.format("Genre name can not be blank. %s", genre));
         }
         return true;
     }
